add model support in ddf